--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+.mvn/
 
 ### STS ###
 .apt_generated
@@ -31,3 +29,7 @@ build/
 
 ### VS Code ###
 .vscode/
+
+mvnw
+mvnw.cmd
+.DS_Store
