--- a/manifest.yml
+++ b/manifest.yml
@@ -4,4 +4,4 @@ applications:
   memory: 1G
   instances: 1
   buildpack: java_buildpack_offline
-  path: target/gs-rest-service-0.1.0-SNAPSHOT.jar
+  path: target/rest-example-0.0.1-SNAPSHOT.jar
